--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="slide_2_desc">Create a custom note</string>
 
     <string name="slide_3_title">Search</string>
-    <string name="slide_3_desc">Filter highlights by tags or categories</string>
+    <string name="slide_3_desc">Filter highlights and notes by title,tag and category</string>
 
     <string name="slide_4_title">Backup</string>
     <string name="slide_4_desc">Trust on us.Your note is always safe and secure</string>
@@ -22,5 +22,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_signout">Sign Out</string>
 
 </resources>
